--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="_config.yml">
         <style>
-            header{
+            header, h2{
             text-align: center;
             }
         </style>
@@ -22,12 +22,12 @@
         <!--Main Menu-->
         
         <!--About Me-->
-        <h2>Ghizlane Rehioui</h2>
+        <h2>About Me</h2>
         <p>An aspiring self-tought programmer interested in highly impactful projects.</p>
         <p>An aspiring self-tought programmer interested in highly impactful projects.</p>
         
         <!--Projects-->
-        <h2 style = "text-align:center">Projects</h2>
+        <h2>Projects</h2>
         <div class="projects">
             <div>
                 <h3>Project 1</h3>
